force-app/main/default/objects/Commission_Eligibility_Config__mdt/Commission_Eligibility_Config__mdt.object-meta.xml
<CustomObject>
    <label>Commission Eligibility Config</label>
    <pluralLabel>Commission Eligibility Configs</pluralLabel>
</CustomObject>