force-app/main/default/objects/Commission_Eligibility_Config__mdt/fields/Exclude_International__c.field-meta.xml
<CustomField>
    <fullName>Exclude_International__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude International</label>
    <type>Checkbox</type>
</CustomField>