force-app/main/default/objects/Commission_Eligibility_Config__mdt/fields/Min_Paid_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Min_Paid_Percentage__c</fullName>
    <label>Min Paid Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>