force-app/main/default/objects/Commission_Eligibility_Config__mdt/fields/Required_Agency_Status__c.field-meta.xml
<CustomField>
    <fullName>Required_Agency_Status__c</fullName>
    <label>Required Agency Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>