force-app/main/default/objects/Commission_Eligibility_Config__mdt/fields/Required_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Required_Opportunity_Stage__c</fullName>
    <label>Required Opportunity Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>