force-app/main/default/objects/Commission_Eligibility_Config__mdt/fields/Required_Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Required_Unit_Status__c</fullName>
    <label>Required Unit Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>